# backend/src/openapi_routers/theme_router.ts
@@ -3,9 +3,20 @@
 */
 
 import { Router } from "express";
-import { get_theme, read_themes_table } from "../database";
+import { paths, components } from "../../openapi/schema";
+import {
+  delete_theme,
+  get_theme,
+  insert_into_themes,
+  read_themes_table,
+  update_theme,
+} from "../database";
+import { IThemeObject } from "../types";
 
 export const themeRouter = Router();
+
+type themeInterface = components["schemas"]["Theme"];
+type updateThemeInterface = components["schemas"]["UpdateTheme"];
 
 themeRouter.get("/min", async (req, res) => {
   const themes_data = await read_themes_table();
@@ -35,4 +46,64 @@ themeRouter.get("/:themeName", async (req, res) => {
 themeRouter.get("/", async (req, res) => {
   res.status(200);
   return res.send(await read_themes_table());
+});
+
+themeRouter.post("/", async (req, res) => {
+  const new_theme: themeInterface = req.body;
+  if (!new_theme.name) {
+    res.status(400);
+    return res.send({
+      errorType: "InvalidInputError",
+      message: "The name field is required to create a theme.",
+    });
+  }
+
+  const error = await insert_into_themes(new_theme as IThemeObject);
+  if (error !== undefined) {
+    res.status(409);
+    return res.send({
+      errorType: error.name,
+      message: error.message,
+    });
+  }
+
+  const theme = await get_theme(new_theme.name);
+  res.status(200);
+  res.send(theme);
+});
+
+themeRouter.post("/:themeName", async (req, res) => {
+  const theme_params: updateThemeInterface = req.body;
+  const update_params: IThemeObject = Object.assign(
+    {},
+    { name: req.params.themeName },
+    theme_params,
+  );
+
+  const error = await update_theme(update_params);
+  if (error !== undefined) {
+    res.status(404);
+    return res.send({
+      errorType: error.name,
+      message: error.message,
+    });
+  }
+
+  const theme = await get_theme(req.params.themeName);
+  res.status(200);
+  res.send(theme);
+});
+
+themeRouter.delete("/:themeName", async (req, res) => {
+  const error = await delete_theme(req.params.themeName);
+  if (error !== undefined) {
+    res.status(404);
+    return res.send({
+      errorType: error.name,
+      message: error.message,
+    });
+  }
+
+  res.status(200);
+  res.send();
 });
